--- a/jsonviewer/build.gradle
+++ b/jsonviewer/build.gradle
@@ -1,17 +1,13 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.yuyang.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
+        targetSdkVersion 33
     }
 
     buildTypes {
@@ -20,16 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-    lintOptions {
+    lint {
         abortOnError false
     }
-
+    namespace 'com.yuyh.jsonviewer.library'
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:28.0.0'
-    api("com.android.support:recyclerview-v7:28.0.0")
+    api 'androidx.appcompat:appcompat:1.6.0'
+    api('androidx.recyclerview:recyclerview:1.2.1')
 }
 
 task androidJavadocs(type: Javadoc) {
