--- a/jsonviewer/build.gradle
+++ b/jsonviewer/build.gradle
@@ -1,4 +1,10 @@
-apply plugin: 'com.android.library'
+
+
+
+plugins {
+  id 'maven-publish'
+  id 'com.android.library'
+}
 
 group = 'com.yuyang.library'
 
@@ -25,6 +31,19 @@ android {
 dependencies {
     api 'androidx.appcompat:appcompat:1.6.0'
     api('androidx.recyclerview:recyclerview:1.2.1')
+}
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = "https://maven.pkg.github.com/kadaan/JsonViewer"
+      credentials {
+        username = System.getenv("GITHUB_ACTOR")
+        password = System.getenv("GITHUB_TOKEN")
+      }
+    }
+  }
 }
 
 task androidJavadocs(type: Javadoc) {
